@@ -41,3 +41,5 @@ local repository version: 10
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 [[!tag projects/INM7]]
+
+> [[fixed|done]] --[[Joey]]
