@@ -3,6 +3,9 @@ git-annex (10.20240928) UNRELEASED; urgency=medium
   * p2phttp: Support serving unauthenticated users while requesting
     authentication for operations that need it. Eg, --unauth-readonly
     can be combined with --authenv.
+  * p2phttp: Allow unauthenticated users to lock content by default.
+  * p2phttp: Added --unauth-nolocking option to prevent unauthenticated
+    users from locking content.
   * Allow enabling the servant build flag with older versions of stm,
     allowing building with ghc 9.0.2.
   * git-remote-annex: Fix bug that prevented using it with external special
